add mad minute difficulty

--- a/Xamarin/WritePadSDKAndroidSample/XamarinSDKSample/WritePadXamarinSample.csproj
+++ b/Xamarin/WritePadSDKAndroidSample/XamarinSDKSample/WritePadXamarinSample.csproj
@@ -215,6 +215,7 @@
     <Compile Include="ChallengeQuestionActivity.cs" />
 
     <Compile Include="User.cs" />
+    <Compile Include="RandomQuestions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
